[project]
name = "learn-graphrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.13.2",
    "huggingface-hub>=1.11.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pydantic>=2.13.2",
    "ruff>=0.15.11",
    "sentence-transformers>=5.4.1",
    "tqdm>=4.67.3",
]
