[project]
name = "learn-graphrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.13.2",
    "huggingface-hub>=1.11.0",
    "lightrag-hku>=1.4.14",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pydantic>=2.13.2",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "sentence-transformers>=5.4.1",
    "tqdm>=4.67.3",
]
